--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ h6 {
 
 .menuBar__item.active .menuBar__item--content,
 .menuBar__item:hover .menuBar__item--content {
-  color: #555;
+  color: #333;
 }
 
 .menuBar__item--content i {
@@ -745,6 +745,7 @@ h6 {
   cursor: pointer;
   position: relative;
   overflow: hidden;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .projectItem:hover {
@@ -808,7 +809,7 @@ h6 {
 
 /* Show detail content */
 .overlayContent {
-  padding: 60px 10px 50px;
+  padding: 60px 0 50px;
   height: 100%;
   width: 100%;
   overflow-y: auto;
@@ -817,12 +818,12 @@ h6 {
 }
 
 .overlayContent__btn {
-  background-color: #fff;
   top: 25px;
   padding: 10px 0;
-  width: 78%;
+  width: 79.5%;
   height: 50px;
   position: fixed;
+  background: #fff;
   z-index: 7;
 }
 
@@ -932,6 +933,7 @@ h6 {
 
 .overlay__iframe {
   height: 315px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 /* Get in touch */
@@ -1197,12 +1199,16 @@ textarea::-webkit-scrollbar {
   .overlayProj {
     left: 0;
     width: 100%;
-    padding: 25px 7%;
+    padding: 25px 5%;
   }
 
   .overlayContent__btn {
     top: 25px;
-    width: 83%;
+    width: 89%;
+  }
+
+  .overlayBtn {
+    font-size: 1rem;
   }
 
   /* Cân nhắc lại sau khi xem trên di động */
@@ -1251,6 +1257,10 @@ textarea::-webkit-scrollbar {
 
 .overlaySlide__indicators li.active {
   width: 20px;
+}
+
+.overlaySlide__inner {
+  border: solid 1px rgba(0, 0, 0, 0.12);
 }
 
 .carousel-control-next.overlaySlide__next,
